Edited wiki page through web user interface.

--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -1,7 +1,5 @@
-#Scraper development
-
 = Scrapers being worked on =
 
   * South Oxfordshire (Duncan)
   * Cherwell (Duncan)
-
+  * Islington (Richard)
