Edited wiki page through web user interface.

--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -1,7 +1,34 @@
 = Scrapers being worked on =
 
-  * South Oxfordshire (Duncan)
-  * West Oxfordshire (Duncan)
+  * Angus (Duncan)
+  * Basildon (Duncan)
+  * Bath (Duncan)
+  * Bexley (Duncan)
+  * Blaby (Duncan)
+  * Bristol (Duncan)
+  * Buckinghamshire (Duncan)
   * Cherwell (Duncan)
+  * East Devon (Duncan)
+  * Hart (Duncan)
+  * Huntingdonshire (Duncan)
   * Islington (Richard)
   * Isle of Man (Dan)
+  * Lancaster (Duncan)
+  * Luton (Duncan)
+  * Mid Devon (Duncan)
+  * Oadby and Wigston (Duncan)
+  * Portsmouth (Duncan)
+  * Rushmoor (Duncan)
+  * Sevenoaks (Duncan)
+  * Spelthorne (Duncan)
+  * Stevenage (Duncan)
+  * Southampton (Duncan)
+  * South Oxfordshire (Duncan)
+  * South Staffs (Duncan)
+  * Sunderland (Duncan)
+  * Test Valley (Duncan)
+  * Tonbridge (Duncan)
+  * West Oxfordshire (Duncan)
+  * West Norfolk (Duncan)
+  * Woking (Duncan)
+  * York (Duncan)
