--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -12,7 +12,7 @@
   * East Devon (Duncan)
   * Edinburgh (Duncan) - not working yet
   * Fenland (Duncan) - not working yet
-  * Hambleton (Duncan) not working yet
+  * Hambleton (Duncan) - not working yet
   * Hart (Duncan)
   * Hinckley-Bosworth (Duncan) - uses https
   * Huntingdonshire (Duncan)
@@ -22,7 +22,7 @@
   * Luton (Duncan)
   * Mid Devon (Duncan)
   * Oadby and Wigston (Duncan)
-  * Perthshire (Duncan) - not werking yet
+  * Perthshire (Duncan) - not working yet
   * Portsmouth (Duncan)
   * Rushmoor (Duncan)
   * Scarborough (Duncan) - not working yet
