Edited wiki page through web user interface.

--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -9,6 +9,7 @@
   * Buckinghamshire (Duncan)
   * Cherwell (Duncan)
   * Chiltern (Duncan) - uses https
+  * Doncaster (Duncan)
   * East Devon (Duncan)
   * Edinburgh (Duncan)
   * Fenland (Duncan)
