Edited wiki page through web user interface.

--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -1,19 +1,26 @@
 = Scrapers being worked on =
 
   * Angus (Duncan)
+  * Aylesbury Vale (Duncan)
   * Basildon (Duncan)
   * Bath (Duncan)
   * Bexley (Duncan)
   * Blaby (Duncan)
   * Bristol (Duncan)
   * Buckinghamshire (Duncan)
+  * Chelmsford (Duncan)
   * Cherwell (Duncan)
   * Chiltern (Duncan) - uses https
+  * City of London (Duncan)
+  * Cornwall (Duncan)
   * Doncaster (Duncan)
   * East Devon (Duncan)
   * Edinburgh (Duncan)
+  * Epsom and Ewell (Duncan)
   * Fenland (Duncan)
+  * Gedling (Duncan)
   * Hambleton (Duncan) - not working yet
+  * Hammersmith and Fulham (Duncan)
   * Harrogate (Duncan)
   * Hart (Duncan)
   * Hinckley-Bosworth (Duncan) - uses https
@@ -21,9 +28,12 @@
   * Islington (Richard)
   * Isle of Man (Dan)
   * Kerrier (Duncan)
+  * Knowsley (Duncan)
   * Lancaster (Duncan)
   * Luton (Duncan)
+  * Malvern Hills (Duncan)
   * Mid Devon (Duncan)
+  * North Tyneside(Duncan)
   * Oadby and Wigston (Duncan)
   * Oswestry (Duncan)
   * Perthshire (Duncan) - not working yet
@@ -35,12 +45,14 @@
   * Stevenage (Duncan)
   * Stockton-On-Tees (Duncan)
   * Southampton (Duncan)
+  * South Bucks (Duncan)
   * South Oxfordshire (Duncan)
   * South Staffs (Duncan)
   * Sunderland (Duncan)
   * Test Valley (Duncan)
   * Tonbridge (Duncan)
   * Waveney (Duncan)
+  * West Lancashire (Duncan)
   * West Oxfordshire (Duncan) - not working yet
   * West Norfolk (Duncan)
   * Woking (Duncan)
