Edited wiki page through web user interface.

--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -53,7 +53,7 @@
   * Southampton (Duncan)
   * South Bucks (Duncan)
   * South Oxfordshire (Duncan)
-  * South Staffs (Duncan)
+  * South Staffordshire (Duncan)
   * Spelthorne (Duncan)
   * Stevenage (Duncan)
   * Stirling (Duncan) - site is broken
