--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -3,7 +3,7 @@
   * Islington (Richard)
   * Isle of Man (Dan)
   * Bromley (Duncan) - publicaccess site refuses access unless IE (not fooled by setting browser string in Konqueror)
-  * Bracknell Forest (Duncan) - site is broken
+  * Bracknell Forest (Duncan) - uses https
   * Caradon (Duncan) - site is missing the main menu on the left
   * Chiltern (Duncan) - uses https
   * Chorley (Duncan) - site is broken
