--- a/wiki/ScraperDevelopment.wiki
+++ b/wiki/ScraperDevelopment.wiki
@@ -13,7 +13,6 @@
   * Newcastle (Duncan) - works in browser - empty results for script
   * Perthshire (Duncan) - causes an error in my parser
   * Selby (Duncan) - works in browser - empty results for script
-  * Stirling (Duncan) - site is broken
   * Stratford (Duncan) - site is broken
   * Teignbridge (Duncan) - site is broken
   * Watford (Duncan) - site is broken
@@ -40,5 +39,6 @@
   * Oswestry
   * Redditch
   * St Helens
+  * Stirling
   * Wear Valley
   * Wellingborough
